<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="30dp"
                app:civ_border_color="@color/dark"
                app:civ_border_width="1dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_photo"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:textColor="#379bff"
                android:textSize="16sp"/>

            <!-- username section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout1">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_username"
                    android:layout_centerVertical="true"
                    android:id="@+id/username_image"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/username"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/username_image"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/username_hint"/>

            </RelativeLayout>

            <!-- name surname section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_name_surname"
                    android:layout_centerVertical="true"
                    android:id="@+id/name_surname_image"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/display_name"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/name_surname_image"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/name_hint"/>

            </RelativeLayout>

            <!-- website section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_web"
                    android:layout_centerVertical="true"
                    android:id="@+id/website_image"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/website"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/website_image"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/website_hint"/>

            </RelativeLayout>

            <!-- description section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"
                    android:id="@+id/description_image"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/description_image"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/description_hint"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</merge>